fix create_project overflow

--- a/label_studio/frontend/src/pages/CreateProject/CreateProject.styl
+++ b/label_studio/frontend/src/pages/CreateProject/CreateProject.styl
@@ -36,5 +36,8 @@
   form.project-name > *:not(:first-child)
     margin-top: 32px
     
+form{
+  overflow-y: auto
+}
 
   
